--- a/PeMo.cabal
+++ b/PeMo.cabal
@@ -18,4 +18,4 @@ executable PeMo
   main-is: Main.hs
   hs-source-dirs: Source/PeMo             
   -- other-modules:       
-  build-depends:       base ==4.6.*, text ==0.11.*, vty ==4.7.*, vty-ui ==1.6.*, pontarius-xmpp ==0.3.*, network ==2.4.*, data-default ==0.5.*, hslogger ==1.2.*
+  build-depends:       base ==4.6.*, text ==0.11.*, vty ==4.7.*, vty-ui ==1.6.*, pontarius-xmpp ==0.3.*, network ==2.4.*, data-default ==0.5.*, hslogger ==1.2.*, unix == 2.6.*
