--- a/PeMo.cabal
+++ b/PeMo.cabal
@@ -6,7 +6,7 @@ version:             0.0.1.0
 -- synopsis:            
 -- description:         
 license:             BSD3
-license-file:        LICENSE
+license-file:        LICENSE.md
 author:              Pedro Matias, Mozhan Soltani
 maintainer:          mozhan.soltani@gmail.com
 -- copyright:           
