--- a/PeMo.cabal
+++ b/PeMo.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.8
 
 executable PeMo
   main-is: Main.hs
-  hs-source-dirs: Source            
+  hs-source-dirs: src            
   -- other-modules:       
   build-depends:       base ==4.6.*, text ==0.11.*, vty ==4.7.*, vty-ui >=1.6.1, pontarius-xmpp ==0.3.*, network ==2.4.*, data-default ==0.5.*, hslogger ==1.2.*, unix == 2.6.*
-  ghc-options: -Wall
+  --ghc-options: -Wall
