--- a/PeMo.cabal
+++ b/PeMo.cabal
@@ -22,5 +22,14 @@ executable PeMo
                 UI
                 Util
                 Types      
-  build-depends:       base ==4.6.*, text ==0.11.*, vty ==4.7.*, vty-ui >=1.6.1, pontarius-xmpp ==0.3.*, network ==2.4.*, data-default ==0.5.*, hslogger ==1.2.*, unix == 2.6.*
+  build-depends:
+        base,
+        text ,
+        vty  ,
+        vty-ui ,
+        pontarius-xmpp ,
+        network ,
+        data-default ,
+        hslogger ,
+        unix
   --ghc-options: -Wall
