--- a/PeMo.cabal
+++ b/PeMo.cabal
@@ -2,7 +2,7 @@
 -- see http://haskell.org/cabal/users-guide/
 
 name:                PeMo
-version:             0.0.1.0
+version:             0.1.0.0
 -- synopsis:            
 -- description:         
 license:             BSD3
@@ -12,24 +12,25 @@ maintainer:          mozhan.soltani@gmail.com
 -- copyright:           
 category:            Network
 build-type:          Simple
-cabal-version:       >=1.8
+cabal-version:       >=1.10
 
 executable PeMo
   main-is: Main.hs
-  hs-source-dirs: src            
+  hs-source-dirs: src
   other-modules: 
                 IM
                 UI
                 Util
-                Types      
-  build-depends:
-        base,
-        text ,
-        vty  ,
-        vty-ui ,
-        pontarius-xmpp ,
-        network ,
-        data-default ,
-        hslogger ,
-        unix
-  --ghc-options: -Wall
+                Types
+  other-extensions:    OverloadedStrings
+  build-depends:       base >=4.7 && <4.8
+                     , text >=1.1 && <1.2
+                     , data-default >=0.5 && <0.6
+                     , pontarius-xmpp >=0.4 && <0.5
+                     , network >=2.4 && <2.5
+                     , vty >=4.7 && <4.8
+                     , vty-ui >=1.7 && <1.8
+                     , unix >=2.7 && <2.8
+                     , hslogger >=1.2 && <1.3
+  hs-source-dirs:      src
+  default-language:    Haskell2010
